--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<div class="authorization">
 			<h2>Welcome to VP</h2>
-			<img src="2.jpg" >
+			<img src="https://scontent.fiev5-1.fna.fbcdn.net/v/t1.0-9/1378362_660776620608161_1656552358_n.jpg?_nc_cat=107&ccb=2&_nc_sid=09cbfe&_nc_ohc=OwiLAN8jB-MAX9gwvTJ&_nc_ht=scontent.fiev5-1.fna&oh=b011391b0e659e0d7ad3ed2ceceee4d9&oe=5FC0FFEB" >
 	</div>
 </div>
 
